# Memory-Management-for-Visual-Language-Navigation-

./: .gitignore  CODE_OVERVIEW.md  README.md  efficientnav.py  h2o_cache.py  navigation_map.py  requirements.txt  thor_adapter.py  units.py
dino_service_patch/efficientnav_detection/: detection_node.py  package.xml
dino_service_patch/efficientnav_interfaces/: CMakeLists.txt  package.xml
dino_service_patch/efficientnav_interfaces/srv/: DetectObjects.srv
efficientnav_desktop_ui/: README.md  app.py  run_desktop_ui.bat  run_desktop_ui.sh
efficientnav_desktop_ui/backend/: config.py  house_browser.py  log_parser.py  result_loader.py  runner.py
