<?xml version="1.0"?>
<package format="3">
  <name>efficientnav_detection</name>
  <version>0.1.0</version>
  <description>ROS 2 GroundingDINO detection node extracted from EfficientNav.</description>
  <maintainer email="min@example.com">min</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>efficientnav_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
